--- a/main.html
+++ b/main.html
@@ -7,6 +7,24 @@
 </head>
 
 <body>
+	<h1>Aarti</h1>
+<div><img src="\photos\b.jpg" alt="my photo"></div>
+	
+	<a href="https://in.linkedin.com/aarti">linkdin</a>
+	<section id="skills"> skills
+		<ol>
+			<li>web dev</li>
+			<li> video editing</li>
+			<li>photography</li>
+	
+		</ol>
+	</section>
+	<section id="projects"> projects
+		<ul>
+			<li> youtube clone</li>
+			<li>facebook clone</li>
+		</ul>
+	</section>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
